--- a/Datos/App.Config
+++ b/Datos/App.Config
@@ -18,7 +18,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
 <connectionStrings>
-	<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodBD.csdl|res://*/Infrastructure.equipodBD.ssdl|res://*/Infrastructure.equipodBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=C02PC03\SQLEXPRESS;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodDB.csdl|res://*/Infrastructure.equipodDB.ssdl|res://*/Infrastructure.equipodDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEVIN;initial catalog=equipod;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 </configuration>
