--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -139,40 +139,40 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\Actividades.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Administradores.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Clientes.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\equipodBD.Context.cs">
+    <Compile Include="Infrastructure\equipodDB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>equipodBD.Context.tt</DependentUpon>
+      <DependentUpon>equipodDB.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\equipodBD.cs">
+    <Compile Include="Infrastructure\equipodDB.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\equipodBD.Designer.cs">
+    <Compile Include="Infrastructure\equipodDB.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>equipodBD.edmx</DependentUpon>
+      <DependentUpon>equipodDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Monitores.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Usuarios.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Usuarios_Actividades.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Valoraciones.cs">
-      <DependentUpon>equipodBD.tt</DependentUpon>
+      <DependentUpon>equipodDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ActividadRepository.cs" />
@@ -183,28 +183,29 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <EntityDeploy Include="Infrastructure\equipodBD.edmx">
+    <EntityDeploy Include="Infrastructure\equipodDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>equipodBD.Designer.cs</LastGenOutput>
+      <LastGenOutput>equipodDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Infrastructure\equipodBD.edmx.diagram">
-      <DependentUpon>equipodBD.edmx</DependentUpon>
+    <None Include="Infrastructure\equipodDB.edmx.diagram">
+      <DependentUpon>equipodDB.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Content Include="Infrastructure\equipodBD.Context.tt">
+    <Content Include="Infrastructure\equipodDB.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>equipodBD.edmx</DependentUpon>
-      <LastGenOutput>equipodBD.Context.cs</LastGenOutput>
+      <DependentUpon>equipodDB.edmx</DependentUpon>
+      <LastGenOutput>equipodDB.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Infrastructure\equipodBD.tt">
+    <Content Include="Infrastructure\equipodDB.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>equipodBD.edmx</DependentUpon>
-      <LastGenOutput>equipodBD.cs</LastGenOutput>
+      <DependentUpon>equipodDB.edmx</DependentUpon>
+      <LastGenOutput>equipodDB.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
