--- a/Datos/App.Config
+++ b/Datos/App.Config
@@ -18,8 +18,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
-<connectionStrings>
-	<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodDB.csdl|res://*/Infrastructure.equipodDB.ssdl|res://*/Infrastructure.equipodDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEVIN;initial catalog=equipod;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
-</configuration>
+<connectionStrings><add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodDB.csdl|res://*/Infrastructure.equipodDB.ssdl|res://*/Infrastructure.equipodDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEVIN;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
