--- a/ProyectoDI_GrupoD/App.config
+++ b/ProyectoDI_GrupoD/App.config
@@ -19,6 +19,6 @@
     </assemblyBinding>
   </runtime>
 	<connectionStrings>
-		<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodDB.csdl|res://*/Infrastructure.equipodDB.ssdl|res://*/Infrastructure.equipodDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEVIN;initial catalog=equipod;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodDB.csdl|res://*/Infrastructure.equipodDB.ssdl|res://*/Infrastructure.equipodDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEVIN;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 </configuration>
